--- a/createquiz.html
+++ b/createquiz.html
@@ -28,12 +28,12 @@
             <button onclick="addQuestion()">Add Question</button>
             <button onclick="saveQuiz()">Save Quiz</button>
         </div>
-<div id="performQuizPage" style="display: none;">
+<!--<div id="performQuizPage" style="display: none;">
     <h2>Perform Quiz</h2>
     <div id="quizQuestions"></div>
     <button onclick="submitAnswers()">Submit Answers</button>
     <p id="quizResult"></p>
-</div>
+</div>-->
 
     </div>
 
