--- a/interface.html
+++ b/interface.html
@@ -16,7 +16,7 @@
         <li class="user-info">
             <a href="#" class="dropdown-btn"><img src="login-photo.png" alt="User Photo" width="50" height="50"></a>
             <ul class="dropdown-content">
-                <li><a href="#">Log out</a></li>
+                <li><a href="#">Logout</a> <img  src="logout.png" alt=""></li>
             </ul>
         </li>
     </header>
