--- a/interface.html
+++ b/interface.html
@@ -16,7 +16,7 @@
         <li class="user-info">
             <a href="#" class="dropdown-btn"><img src="login-photo.png" alt="User Photo" width="50" height="50"></a>
             <ul class="dropdown-content">
-                <li><a href="#">Log out</a></li>
+                <li><a href="main.html">Logout</a> <img  src="logout.png" alt=""></li>
             </ul>
         </li>
     </header>
@@ -53,7 +53,7 @@
     </div>
     <div class="quiz_section">
         <h1>Quizzes</h1>
-        <div class="quizzes">
+        <div class="quizzes" id="quizzesContainer">
             <div class="quiz">
                 <h1>GK</h1>
                 <p>Start -></p>
@@ -68,8 +68,8 @@
             </div>
         </div>
     </div>
-    <div class="add-quiz">
-        <h1>Add Quiz</h1>
+    <div class="add-quiz" >
+        <h1><a href="create.html" class="quiz-link">Add Quiz</a></h1>
     </div>
 
 
