Update interface.html changes in quiz button

--- a/interface.html
+++ b/interface.html
@@ -54,7 +54,7 @@
     <div class="quiz_section">
         <h1>Quizzes</h1>
         <div class="quizzes" id="quizzesContainer">
-            <div class="quiz">
+            <div class="quiz " onclick="navigateToNewPage()">
                 <h1>GK</h1>
                 <p>Start -></p>
             </div>
