--- a/interface.html
+++ b/interface.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-    <header>  
+    <header>
         <h1 class="heading">Quiz</h1>
         <div id="name_of_user"></div>
         <li class="user-info">
             <a href="#" class="dropdown-btn"><img src="login-photo.png" alt="User Photo" width="50" height="50"></a>
             <ul class="dropdown-content">
-                <li><a href="main.html">Logout</a> <img  src="logout.png" alt=""></li>
+                <li><a href="main.html">Logout</a> <img src="logout.png" alt=""></li>
             </ul>
         </li>
     </header>
@@ -54,7 +54,7 @@
     <div class="quiz_section">
         <h1>Quizzes</h1>
         <div class="quizzes" id="quizzesContainer">
-            <div class="quiz " onclick="navigateToNewPage()">
+            <div class="quiz">
                 <h1>GK</h1>
                 <p>Start -></p>
             </div>
@@ -68,9 +68,10 @@
             </div>
         </div>
     </div>
-    <div class="add-quiz" >
-        <h1><a href="create.html" class="quiz-link">Add Quiz</a></h1>
+    <div class="add-quiz" id="addQuizDiv">
+        <h1>Add Quiz</h1>
     </div>
+
 
 
 
